--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,11 @@
 		"ext-pcre": "*"
 	},
 	"require-dev": {
-		"leafo/lessphp": "~0.4.0"
+		"leafo/lessphp": "~0.4.0",
+		"meenie/javascript-packer": "~1.1"
 	},
 	"suggest": {
-		"leafo/lessphp": "LESS support"
+		"leafo/lessphp": "LESS support",
+		"meenie/javascript-packer": "Keep track of the Packer PHP port using Composer"
 	}
 }
