--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,12 @@
 	},
 	"require-dev": {
 		"leafo/lessphp": "~0.4.0",
-		"meenie/javascript-packer": "~1.1"
+		"meenie/javascript-packer": "~1.1",
+		"tubalmartin/cssmin": "~2.4.8"
 	},
 	"suggest": {
 		"leafo/lessphp": "LESS support",
 		"meenie/javascript-packer": "Keep track of the Packer PHP port using Composer",
-		"tubalmartin/cssmin": "~2.4.8"
-	},
-	"suggest": {
 		"tubalmartin/cssmin": "Support minify with CSSMin (YUI PHP port)"
 	}
 }
